PP3: Allow requesting a new validation without first dropping an existing validation
The plugin portal requires a validation of new versions of a plugin.
Before this change a request for a new validation required an existing
validition to be dropped first. For the timeframe between the old
validation being droppend and the revalidation the plugin is not
available to users.

This change modifies the behavior of the portal, so that a revalidation
can be requested while one exists. Old validations are dropped once a
new validation is done.

--- a/pp3/module/Application/view/application/plugin-version/_pluginVersion-form.phtml
+++ b/pp3/module/Application/view/application/plugin-version/_pluginVersion-form.phtml
@@ -30,11 +30,11 @@
     <div class="form-group">
         <label for="relnotes">Release notes <span class="text-primary"></span></label>
         <textarea class="form-control" id="relnotes" name="relnotes" rows="5"
-        placeholder="Release notes"><?= $this->pluginVersion->getRelnotes() ?></textarea>                
+        placeholder="Release notes"><?= $this->pluginVersion->getRelnotes() ?></textarea>
     </div>
     <div class="form-group">
         <label for="url">NetBeans version</label>
-        <?= $this->partial('partials/_nbVersion-select.phtml', 
-                array('nbVersions' => $this->nbVersions, 'pluginVersion' =>$this->pluginVersion, 'verifiedNbVersionIds'=>$this->verifiedNbVersionIds)); ?>
+        <?= $this->partial('partials/_nbVersion-select.phtml',
+                array('nbVersions' => $this->nbVersions, 'pluginVersion' =>$this->pluginVersion, 'verifiedNbVersionIds'=>$this->verifiedNbVersionIds, "verificationPendingNbVersionIds" => $this->verificationPendingNbVersionIds)); ?>
     </div>
     <?php } ?>
