--- a/pp3/module/Application/view/partials/_nbVersion-select.phtml
+++ b/pp3/module/Application/view/partials/_nbVersion-select.phtml
@@ -22,18 +22,18 @@
 $mapping = array();
 $assignedNbVersions = array();
 foreach($this->pluginVersion->getNbVersionsPluginVersions() as $nbvPv) {
-    $assignedNbVersions[$nbvPv->getNbVersionId()] = $nbvPv;    
+    $assignedNbVersions[$nbvPv->getNbVersionId()] = $nbvPv;
 }
 if($this->nbVersions) {
     echo '<table class="table table-striped">';
-    foreach ($this->nbVersions as $nbv) {  
-        echo '            
+    foreach ($this->nbVersions as $nbv) {
+        echo '
         <tr>
         <td>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="'.$nbv->getId().'" name="nbVersion_ids[]" '.(array_key_exists($nbv->getId(), $assignedNbVersions) ? 'checked' : '').'>    
-                <span class="badge badge-brown">NB '.$nbv->getVersion().'</span>          
+                <input type="checkbox" value="'.$nbv->getId().'" name="nbVersion_ids[]" '.(array_key_exists($nbv->getId(), $assignedNbVersions) ? 'checked' : '').'>
+                <span class="badge badge-brown">NB '.$nbv->getVersion().'</span>
             </label>
         </div>
         <td>
@@ -41,17 +41,17 @@ if($this->nbVersions) {
         if (array_key_exists($nbv->getId(), $assignedNbVersions)) {
             $nbvPv = $assignedNbVersions[$nbv->getId()];
             if ($nbvPv->getVerificationId()) {
-                echo 'Verification request created on '.$nbvPv->getVerification()->getCreatedAt()->format('Y-m-d').' 
+                echo 'Verification request created on '.$nbvPv->getVerification()->getCreatedAt()->format('Y-m-d').'
                 &nbsp; &nbsp; <span class="badge '.$nbvPv->getVerification()->getStatusBadgeClass().'">'.$nbvPv->getVerification()->getStatusBadgeTitle().'</span>
                 &nbsp;&nbsp;
                 <a href="'.$this->url('plugin-version',array('action'=>'edit'),array('query' => array('id' => $this->pluginVersion->getId(), 'verifId' => $nbvPv->getVerification()->getId()))).'" class="btn btn-default" role="button">Drop verification</a>';
-            } elseif(!in_array($nbv->getId(), $this->verifiedNbVersionIds)) {
+            } elseif(!in_array($nbv->getId(), $this->verificationPendingNbVersionIds)) {
                 echo '<a href="'.$this->url('verification',array('action'=>'create'),array('query' => array('nbvPvId' => $nbvPv->getId()))).'" class="btn btn-default" role="button">Request verification</a>';
             }
         }
 
         echo '</td>
         </tr>';
-    }    
+    }
     echo '</table>';
 }
